--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span><img src="images/AmLogo.png" width="125" height="125" alt="" /></span>
+							<span><img class="logo" src="images/AmLogo.png" width="125" height="125" alt="" /></span>
 						</div>
 						<div class="content">
 							<div class="inner">
