--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<h2 class="major">Education</h2>
 								<span class="image main"><img src="images/IITLogo.PNG" alt="" /></span>
 								<p>Bachelors of Computer Science</p>
-								<p>GPA: 3.6/4</p>
+								<p>GPA: 3.3/4</p>
 								<p>Anticipated Graduation May 2025</p>
 								<p>Awarded Dean's List in Fall 2021</p>
 							</article>
@@ -239,41 +239,27 @@
 							</article>
 							<article id="projects">
 								<h2 class="major">Other Projects</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/ChefCompanion.PNG" alt="" /></span>
 
 								<h3>Chef's Companion - Google HPS Speaker</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p> I designed this speaker as a part of Google's Hardware Product Sprint program. In this 12 week program we had to design an enclosure
+									for Google's AIY voice kit speaker. We came up with a problem that we wanted our speaker to solve and then design around that. 
+								</p>
+								<p> The problem I decided to solve with my speaker was not knowing what to cook. Many times, people just don't know what they want to make themselves
+									to eat. The idea for this speaker was that when you press down on the top hat, it tells you a recipe to cook. We were only concerned with the 
+									actual enclosure and not the functionality of the speaker. So I did not have to worry about it actually giving you a recipe. 
+								</p>
+								<p> Overall I am very happy with the design and aesthetic. It houses all the components of the AIY voice kit. The speaker was designed with plastic injection molding principles in mind so the design
+									is mass manufacturable. I learned a lot of new skills especially since this is the first time I worked on an engineering project. I learned plastic
+									injection molding design, tolerance analysis, design for manufacturability and design for assembly. All of these skills culminated in the creation
+									of this beautiful speaker with an exquisite mustache. 
+								</p>
 							</article>
 
 						<!-- Resume -->
 							<article id="resume">
 								<h2 class="major">Resume</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
+								<iframe src="images/Morales, Alonso Google Resume.pdf" width="100%" height="750px"></iframe>
 							</article>
 
 						<!-- Elements -->
