--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 						<!-- Resume -->
 							<article id="resume">
 								<h2 class="major">Resume</h2>
-								<iframe src="images/Morales, Alonso Google Resume.pdf" width="100%" height="750px"></iframe>
+								<iframe src="images/Resume - Morales, Alonso.pdf" width="100%" height="750px"></iframe>
 							</article>
 
 						<!-- Elements -->
